# api/mytenant.pb.gw.go
@@ -78,6 +78,63 @@ func local_request_MyTenant_UpdateMyPasswordPolicy_0(ctx context.Context, marsha
 	return msg, metadata, err
 }
 
+var filter_MyTenant_GetKeycloakSessionLimitsInstructions_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
+
+func request_MyTenant_GetKeycloakSessionLimitsInstructions_0(ctx context.Context, marshaler runtime.Marshaler, client MyTenantClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq GetKeycloakSessionLimitsInstructionsReq
+		metadata runtime.ServerMetadata
+	)
+	io.Copy(io.Discard, req.Body)
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_MyTenant_GetKeycloakSessionLimitsInstructions_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := client.GetKeycloakSessionLimitsInstructions(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_MyTenant_GetKeycloakSessionLimitsInstructions_0(ctx context.Context, marshaler runtime.Marshaler, server MyTenantServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq GetKeycloakSessionLimitsInstructionsReq
+		metadata runtime.ServerMetadata
+	)
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_MyTenant_GetKeycloakSessionLimitsInstructions_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := server.GetKeycloakSessionLimitsInstructions(ctx, &protoReq)
+	return msg, metadata, err
+}
+
+func request_MyTenant_ConfigureKeycloakSessionLimits_0(ctx context.Context, marshaler runtime.Marshaler, client MyTenantClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq ConfigureKeycloakSessionLimitsReq
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := client.ConfigureKeycloakSessionLimits(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_MyTenant_ConfigureKeycloakSessionLimits_0(ctx context.Context, marshaler runtime.Marshaler, server MyTenantServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq ConfigureKeycloakSessionLimitsReq
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := server.ConfigureKeycloakSessionLimits(ctx, &protoReq)
+	return msg, metadata, err
+}
+
 // RegisterMyTenantHandlerServer registers the http handlers for service MyTenant to "mux".
 // UnaryRPC     :call MyTenantServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -123,6 +180,46 @@ func RegisterMyTenantHandlerServer(ctx context.Context, mux *runtime.ServeMux, s
 			return
 		}
 		forward_MyTenant_UpdateMyPasswordPolicy_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
+	mux.Handle(http.MethodGet, pattern_MyTenant_GetKeycloakSessionLimitsInstructions_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/api.MyTenant/GetKeycloakSessionLimitsInstructions", runtime.WithHTTPPathPattern("/api/mytenant/v1/keycloak-session-limits"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_MyTenant_GetKeycloakSessionLimitsInstructions_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_MyTenant_GetKeycloakSessionLimitsInstructions_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
+	mux.Handle(http.MethodPut, pattern_MyTenant_ConfigureKeycloakSessionLimits_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/api.MyTenant/ConfigureKeycloakSessionLimits", runtime.WithHTTPPathPattern("/api/mytenant/v1/keycloak-session-limits"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_MyTenant_ConfigureKeycloakSessionLimits_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_MyTenant_ConfigureKeycloakSessionLimits_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
 
 	return nil
@@ -198,15 +295,53 @@ func RegisterMyTenantHandlerClient(ctx context.Context, mux *runtime.ServeMux, c
 		}
 		forward_MyTenant_UpdateMyPasswordPolicy_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodGet, pattern_MyTenant_GetKeycloakSessionLimitsInstructions_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/api.MyTenant/GetKeycloakSessionLimitsInstructions", runtime.WithHTTPPathPattern("/api/mytenant/v1/keycloak-session-limits"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_MyTenant_GetKeycloakSessionLimitsInstructions_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_MyTenant_GetKeycloakSessionLimitsInstructions_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
+	mux.Handle(http.MethodPut, pattern_MyTenant_ConfigureKeycloakSessionLimits_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/api.MyTenant/ConfigureKeycloakSessionLimits", runtime.WithHTTPPathPattern("/api/mytenant/v1/keycloak-session-limits"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_MyTenant_ConfigureKeycloakSessionLimits_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_MyTenant_ConfigureKeycloakSessionLimits_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	return nil
 }
 
 var (
-	pattern_MyTenant_GetMyPasswordPolicy_0    = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"api", "mytenant", "v1", "password-policy"}, ""))
-	pattern_MyTenant_UpdateMyPasswordPolicy_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"api", "mytenant", "v1", "password-policy"}, ""))
+	pattern_MyTenant_GetMyPasswordPolicy_0                  = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"api", "mytenant", "v1", "password-policy"}, ""))
+	pattern_MyTenant_UpdateMyPasswordPolicy_0               = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"api", "mytenant", "v1", "password-policy"}, ""))
+	pattern_MyTenant_GetKeycloakSessionLimitsInstructions_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"api", "mytenant", "v1", "keycloak-session-limits"}, ""))
+	pattern_MyTenant_ConfigureKeycloakSessionLimits_0       = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"api", "mytenant", "v1", "keycloak-session-limits"}, ""))
 )
 
 var (
-	forward_MyTenant_GetMyPasswordPolicy_0    = runtime.ForwardResponseMessage
-	forward_MyTenant_UpdateMyPasswordPolicy_0 = runtime.ForwardResponseMessage
+	forward_MyTenant_GetMyPasswordPolicy_0                  = runtime.ForwardResponseMessage
+	forward_MyTenant_UpdateMyPasswordPolicy_0               = runtime.ForwardResponseMessage
+	forward_MyTenant_GetKeycloakSessionLimitsInstructions_0 = runtime.ForwardResponseMessage
+	forward_MyTenant_ConfigureKeycloakSessionLimits_0       = runtime.ForwardResponseMessage
 )
